# biodenoising

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  adapt.py  compute_data_stats.py  denoise.py  evaluate.py  generate_training.py  plot.py  prepare_experiments.py  pyproject.toml  requirements.txt  results.py  setup.cfg  setup.py  train.py
biodenoising/: __init__.py  adapt.py  htdemucs.py  hubconf.py
biodenoising/conf/: config.yaml  config_adapt.yaml
biodenoising/datasets/: NoiseCleanRndSet.py  __init__.py  dataprune.py
biodenoising/denoiser/: __init__.py  audio.py  augment.py  cleanunet.py  data.py  demucs.py  denoise.py  distrib.py  dsp.py  enhance.py  evaluate.py  evaluate_speech.py  executor.py  hdemucs.py  htdemucs.py  live.py  loss.py  noise.py  pretrained.py  resample.py  solver.py  spec.py  states.py  stft_loss.py  transformer.py  utils.py
scripts/: rir.sh
